third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_parens_around_name2.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_call_lhs_parens_around_name2.move:3:14
  │
3 │         (foo)()
  │              ^
  │              │
  │              Unexpected '('
  │              Expected ';'
